# src/routes/index.js
@@ -1,8 +1,10 @@
 import { Router } from 'express'
+import usersRoute from './users.routes'
 import actorsRoute from './actors.routes'
 import directorsRoute from './directors.routes'
 const router = Router()
 
+router.use('/users', usersRoute)
 router.use('/actors', actorsRoute)
 router.use('/directors', directorsRoute)
 
